# greentic-cards2pack

./: .gitignore  Cargo.toml  README.md
.codex/: A-PR-01.md  A-PR-02.md  PR-01.md  PR-02.md  PR-03.md  PR-04.md  repo_overview.md
.codex/done/: A-PR-03.md  A-PR-04.md
.github/workflows/: ci.yml
01_generate_pack/01_generate_pack/cards/: card.json
ci/: local_check.sh
component-prompt2flow/: Cargo.toml  component.manifest.json
component-prompt2flow/schemas/io/: input.schema.json  output.schema.json
component-prompt2flow/src/: jaccard.rs  lib.rs  render_options_card.rs  scorer.rs  tokenize.rs
component-prompt2flow/wit/: world.wit
qa/: prompt2flow.form.json
src/: cli.rs  diagnostics.rs  emit_flow.rs  graph.rs  ir.rs  lib.rs  main.rs  qa_integration.rs  scan.rs  tools.rs  workspace.rs
tests/: flow_emit.rs  generate.rs  prompt2flow.rs  qa_integration.rs  scan.rs  support.rs
tests/fixtures/cards/: inconsistent_cardid.json  simple_submit.json
tests/fixtures/cards/filename_fallback/: IT-CARD-99.json
tests/fixtures/cards/flow_emit/: card-a.json  card-c.json  step-b.json  unresolved.json
tests/fixtures/cards/folder_grouping/cards/hrAssist/: HR-CARD-00.json
tests/fixtures/prompt2flow/: prompt2flow_answers.json
tests/fixtures/prompt2flow/cards/: setup-card.json
tests/gtests/smoke/: 01_generate_pack.gtest
