[package]
name = "greentic-cards2pack"
version = "0.4.1"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_bw = "2"
time = { version = "0.3", features = ["formatting"] }
walkdir = "2"
which = "8"

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
